--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "twilio": "^4.19.0",
-    "ws": "^8.18.2"
+    "ws": "^8.18.2",
+    "tailwindcss": "^3.3.0",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -38,7 +40,8 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prisma": "^6.9.0",
+    "typescript": "^5",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
