--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "@deepgram/sdk": "^3.13.0",
     "@prisma/client": "^6.9.0",
+    "@tailwindcss/typography": "^0.5.10",
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.5.0",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
@@ -24,12 +28,12 @@
     "react-dom": "^18",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
-    "twilio": "^4.19.0",
-    "ws": "^8.18.2",
     "tailwindcss": "^3.3.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "twilio": "^4.19.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
@@ -40,8 +44,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prisma": "^6.9.0",
-    "typescript": "^5",
     "tailwindcss": "^3.3.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "typescript": "^5"
   }
 }
