inbound call hanlding

--- a/env.example
+++ b/env.example
@@ -8,5 +8,14 @@ NEXTAUTH_SECRET="your-secret-key-min-32-chars-long"
 TWILIO_ACCOUNT_SID="your_twilio_account_sid_here"
 TWILIO_AUTH_TOKEN="your_twilio_auth_token_here"
 
+# Twilio Voice SDK Configuration (Required for Browser Calling)
+TWILIO_API_KEY="your_twilio_api_key_here"
+TWILIO_API_SECRET="your_twilio_api_secret_here"
+TWILIO_TWIML_APP_SID="your_twiml_app_sid_here"
+
+# Application Configuration
+NEXT_PUBLIC_SITE_URL="https://your-domain.com"
+WEBSOCKET_PORT="3001"
+
 # Deepgram Configuration (Required for Speech-to-Text)
 DEEPGRAM_API_KEY="your_deepgram_api_key_here" 
