--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@deepgram/sdk": "^3.13.0",
     "@prisma/client": "^6.9.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@twilio/voice-sdk": "^2.13.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.5.0",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "pm2": "^6.0.8",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.4",
