--- a/env.example
+++ b/env.example
@@ -7,6 +7,7 @@ NEXTAUTH_SECRET="your-secret-key-min-32-chars-long"
 # Twilio Configuration (Required)
 TWILIO_ACCOUNT_SID="your_twilio_account_sid_here"
 TWILIO_AUTH_TOKEN="your_twilio_auth_token_here"
+TWILIO_PHONE_NUMBER="+1234567890"
 
 # Twilio Voice SDK Configuration (Required for Browser Calling)
 TWILIO_API_KEY="your_twilio_api_key_here"
