ai coaching integration

--- a/env.example
+++ b/env.example
@@ -19,4 +19,7 @@ NEXT_PUBLIC_SITE_URL="https://your-domain.com"
 WEBSOCKET_PORT="3001"
 
 # Deepgram Configuration (Required for Speech-to-Text)
-DEEPGRAM_API_KEY="your_deepgram_api_key_here" 
+DEEPGRAM_API_KEY="your_deepgram_api_key_here"
+
+# OpenAI Configuration (Required for AI Coaching)
+OPENAI_API_KEY="your_openai_api_key_here" 
