--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "openai": "^5.5.1",
     "pm2": "^6.0.8",
     "react": "^18",
     "react-dom": "^18",
