--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.848.0",
+    "@aws-sdk/lib-storage": "^3.848.0",
     "@deepgram/sdk": "^3.13.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@prisma/client": "^6.9.0",
     "@tailwindcss/typography": "^0.5.10",
     "@twilio/voice-sdk": "^2.13.0",
