--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.5.0",
     "events": "^3.3.0",
     "express": "^4.18.2",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
